# algorithms-project-69

./: Makefile  README.md  pyproject.toml
search_engine/: search_engine.py
search_engine/scripts/: search_engine.py
tests/: test_search.py
